--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,10 +30,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run PHPCS (PHP CodeSniffer)
-        run: docker compose -f docker-compose.development.yml exec -T app phpcs --standard=PSR12 src/
+        run: docker compose -f docker-compose.development.yml exec -T php-fpm-taskwave phpcs --standard=PSR12 src/
 
       - name: Run PHPMD (PHP Mess Detector)
-        run: docker compose -f docker-compose.development.yml exec -T app phpmd src/ text cleancode,codesize,controversial,design,naming,unusedcode
+        run: docker compose -f docker-compose.development.yml exec -T php-fpm-taskwave phpmd src/ text cleancode,codesize,controversial,design,naming,unusedcode
 
   cleanup:
     name: Cleanup
