--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,15 +30,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run PHPCS (PHP CodeSniffer)
-        run: docker compose -f docker-compose.development.yml exec -T php-fpm-taskwave phpcs --standard=PSR12 src/
+        run: docker compose -f docker-compose.development.yml exec -T php-fpm phpcs --standard=PSR12 src/
 
       - name: Run PHPMD (PHP Mess Detector)
-        run: docker compose -f docker-compose.development.yml exec -T php-fpm-taskwave phpmd src/ text cleancode,codesize,controversial,design,naming,unusedcode
+        run: docker compose -f docker-compose.development.yml exec -T php-fpm phpmd src/ text cleancode,codesize,controversial,design,naming,unusedcode
 
   cleanup:
     name: Cleanup
     runs-on: ubuntu-latest
-    needs: codestyle
+    needs: [build, codestyle]
+    if: always()
 
     steps:
       - name: Stop and remove Docker containers
