--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      - name: Build Docker Compose environment
-        run:  docker compose -f docker-compose.development.yml up -d --build
+      - name: Build and Start Docker Compose environment
+        run: docker compose -f docker-compose.development.yml up --build -d
 
   codestyle:
     name: Code Style
@@ -30,10 +30,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run PHPCS (PHP CodeSniffer)
-        run: docker compose -f docker-compose.development.yml exec -T php-fpm phpcs --standard=PSR12 src/
+        run: docker compose -f docker-compose.development.yml exec -T php-fpm-taskwave phpcs --standard=PSR12 src/
 
       - name: Run PHPMD (PHP Mess Detector)
-        run: docker compose -f docker-compose.development.yml exec -T php-fpm phpmd src/ text cleancode,codesize,controversial,design,naming,unusedcode
+        run: docker compose -f docker-compose.development.yml exec -T php-fpm-taskwave phpmd src/ text cleancode,codesize,controversial,design,naming,unusedcode
 
   cleanup:
     name: Cleanup
@@ -43,4 +43,4 @@ jobs:
 
     steps:
       - name: Stop and remove Docker containers
-        run: docker-compose down
+        run: docker compose -f docker-compose.development.yml down
