--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "slim/slim": "4.*",
         "slim/psr7": "^1.7",
         "nyholm/psr7": "^1.8",
-        "nyholm/psr7-server": "^1.1"
+        "nyholm/psr7-server": "^1.1",
+        "monolog/monolog": "^3.7"
     },
     "require-dev": {
         "phpmd/phpmd": "2.*",
