--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
+        "php": "^8.3",
         "php-di/php-di": "^7.0",
         "php-di/slim-bridge": "^3.4",
         "slim/slim": "4.*",
