#8 Register Logic added

--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,32 @@
 {
-    "name": "luka-lta/task_wave_backend",
-    "type": "project",
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "TaskWaveBackend\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "luka-lta",
-            "email": "luka.lta21@gmail.com"
-        }
-    ],
-    "minimum-stability": "stable",
-    "require": {
-        "php": "^8.3",
-        "php-di/php-di": "^7.0",
-        "php-di/slim-bridge": "^3.4",
-        "slim/slim": "4.*",
-        "slim/psr7": "^1.7",
-        "nyholm/psr7": "^1.8",
-        "nyholm/psr7-server": "^1.1",
-        "monolog/monolog": "^3.7"
-    },
-    "require-dev": {
-        "phpmd/phpmd": "2.*",
-        "squizlabs/php_codesniffer": "3.*"
+  "name": "luka-lta/task_wave_backend",
+  "type": "project",
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "TaskWaveBackend\\": "src/"
     }
+  },
+  "authors": [
+    {
+      "name": "luka-lta",
+      "email": "luka.lta21@gmail.com"
+    }
+  ],
+  "minimum-stability": "stable",
+  "require": {
+    "php": "^8.3",
+    "php-di/php-di": "^7.0",
+    "php-di/slim-bridge": "^3.4",
+    "slim/slim": "4.*",
+    "slim/psr7": "^1.7",
+    "nyholm/psr7": "^1.8",
+    "nyholm/psr7-server": "^1.1",
+    "monolog/monolog": "^3.7",
+    "ext-pdo": "*"
+  },
+  "require-dev": {
+    "phpmd/phpmd": "2.*",
+    "squizlabs/php_codesniffer": "3.*"
+  }
 }
