--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -9,6 +9,8 @@ services:
       - ./docker/nginx/nginx-development.conf:/etc/nginx/conf.d/default.conf
     links:
       - php-fpm
+    networks:
+      - taskWave-shared
 
   php-fpm:
     build:
@@ -25,6 +27,8 @@ services:
       MYSQL_PASSWORD: '1234'
     volumes:
       - ./:/app:rw
+    networks:
+      - taskWave-shared
 
   mysql:
     image: mysql
