#8 Login logic added

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -25,6 +25,7 @@ services:
       MYSQL_HOST: 'mysql-taskwave'
       MYSQL_USER: 'testing'
       MYSQL_PASSWORD: '1234'
+      JWT_SECRET: 'd17c14f3ff470cebe5f85df1efc966b0fcdc2096'
     volumes:
       - ./:/app:rw
     networks:
