--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "nyholm/psr7": "^1.8",
     "nyholm/psr7-server": "^1.1",
     "monolog/monolog": "^3.7",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "firebase/php-jwt": "^6.10"
   },
   "require-dev": {
     "phpmd/phpmd": "2.*",
